--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!--Cheval Batts, Web 140, Viscous cycle-->
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            background-color: #E7FBFB;
+        }
+        h1 {
+            text-align: center;
+            font-size: 4em;
+            color: #010B5B
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
